# agent-alpha

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
agent_alpha/: __init__.py  __main__.py  compiler.py  config.py  data.py  evaluator.py  feature_engine.py  models.py  runner.py  workflow.py
agent_alpha/ast/: __init__.py  codec.py  interpreter.py  nodes.py  registry.py  schema.py  types.py  validate.py
agent_alpha/data/: __init__.py  download_spx_data.py  market_data.py  panel.py  universe.py
agent_alpha/features/: __init__.py  atr.py  core.py  cvd.py  kdj.py  macd.py  moving_averages.py  range_wicks.py  rsi.py  rv.py  vwap.py
agent_alpha/operators/: __init__.py  function_lib.py
notebooks/: 01_agent_alpha_walkthrough.ipynb  02_agent_alpha_spx_experiment.ipynb  03_download_spx_and_run_agent_alpha.ipynb
tests/: test_core_workflows.py  test_operators_features_and_interpreter.py
